minor changes to notes and team.md

--- a/admin/meetings/041421-meeting2.md
+++ b/admin/meetings/041421-meeting2.md
@@ -19,4 +19,6 @@ meeting details:
 - submit intro video to Waynor by midnight.  
 - chose logo. 
 - set up github repository
-- 2 people will be assigned to 1 task to lower bus factor.  
+- 2 people will be assigned to each task to lower bus factor.  
+<hr>
+Note taker: Liu He
